Updated replacing values in dfs

--- a/cancer_data_models.ipynb
+++ b/cancer_data_models.ipynb
@@ -63,8 +63,7 @@
    "outputs": [],
    "source": [
     "labels = cancer_data['diagnosis']\n",
-    "labels.replace('M', 1, inplace=True)\n",
-    "labels.replace('B', 0, inplace=True)\n",
+    "labels.replace({'M': 1, 'B': 0}, inplace=True)\n",
     "\n",
     "features = cancer_data.drop('diagnosis', axis=1)"
    ]
