Formatting of notebooks

--- a/cancer_data_models.ipynb
+++ b/cancer_data_models.ipynb
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### d) K-Nearest Neighbors Model\n",
+    "#### c) K-Nearest Neighbors Model\n",
     "\n",
     "Initialize and fit the KNN model to the training data. Run 5-fold cross validation to tune the optimal\n",
     "number of neighbors, refitting the model based on the best F1 score."
