--- a/voting_data_models.ipynb
+++ b/voting_data_models.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -157,6 +157,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### b) Decision Tree and Naive Bayes Models\n",
+    "\n",
     "For each version of the data, initialize and fit a Decision Tree classifier and a Naive Bayes model.  \n",
     "Evaluate the models on the test data and then run 5-fold cross validation on the whole data set.  \n",
     "F1, precision, recall, and accuracy scores are reported for each fold as well as the mean score across all folds."
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -176,10 +178,8 @@
     {
      "name": "stdout",
      "text": [
-      "Version 1: Decision Tree\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         19                 3\nActual Negative         1                 24\n\nAccuracy: 0.915\n\n    Classification Report\n           Positive    Negative\nNum cases    22           25\nPrecision    0.95       0.89\nRecall       0.86       0.96\nF1 Score     0.90       0.92\n\n",
-      "    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.933    0.913      0.955     0.936\nFold 2   0.978    0.957      1.000     0.979\nFold 3   0.977    1.000      0.955     0.979\nFold 4   0.950    1.000      0.905     0.957\nFold 5   0.884    0.864      0.905     0.889\n\nMean F1: 0.944\nMean Precision: 0.947\nMean Recall: 0.944\nMean Accuracy: 0.948\n-------------------------\nVersion 1: Naive Bayes\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         20                 2\nActual Negative         7                 18\n\nAccuracy: 0.809\n\n    Classification Report\n           Positive    Negative\nNum cases    22           25\nPrecision    0.74       0.90\nRecall       0.91       0.72\nF1 Score     0.82       0.80\n\n    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.894    0.840      0.955     0.894\nFold 2   0.826    0.792      0.864     0.830\nFold 3   0.977    1.000      0.955     0.979\nFold 4   1.000    1.000      1.000     1.000\nFold 5   0.870    0.800      0.952     0.867\n\nMean F1: 0.913\nMean Precision: 0.886\nMean Recall: 0.945\nMean Accuracy: 0.914\n##################################################\nVersion 2: Decision Tree\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         25                 2\nActual Negative         3                 57\n\nAccuracy: 0.943\n\n    Classification Report\n           Positive    Negative\nNum cases    27           60\nPrecision    0.89       0.97\nRecall       0.93       0.95\nF1 Score     0.91       0.96\n\n    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.971    0.971      0.971     0.977\nFold 2   0.957    0.943      0.971     0.966\nFold 3   0.955    0.970      0.941     0.966\nFold 4   0.889    0.933      0.848     0.919\nFold 5   0.892    0.906      0.879     0.919\n\nMean F1: 0.933\nMean Precision: 0.945\nMean Recall: 0.922\nMean Accuracy: 0.949\n-------------------------\nVersion 2: Naive Bayes\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         25                 2\nActual Negative         8                 52\n\nAccuracy: 0.885\n\n    Classification Report\n           Positive    Negative\nNum cases    27           60\nPrecision    0.76       0.96\nRecall       0.93       0.87\nF1 Score     0.83       0.91\n\n",
-      "    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.889    0.842      0.941     0.909\nFold 2   0.822    0.769      0.882     0.852\nFold 3   0.923    0.968      0.882     0.943\nFold 4   0.955    0.941      0.970     0.965\nFold 5   0.800    0.714      0.909     0.826\n\nMean F1: 0.878\nMean Precision: 0.847\nMean Recall: 0.917\nMean Accuracy: 0.899\n##################################################\nVersion 3: Decision Tree\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         24                 3\nActual Negative         5                 55\n\nAccuracy: 0.908\n\n    Classification Report\n           Positive    Negative\nNum cases    27           60\nPrecision    0.83       0.95\nRecall       0.89       0.92\nF1 Score     0.86       0.93\n\n    Cross Validation Scores",
-      "\n         F1     Precision    Recall    Accuracy\nFold 1   0.971    0.971      0.971     0.977\nFold 2   0.932    0.872      1.000     0.943\nFold 3   0.955    0.970      0.941     0.966\nFold 4   0.892    0.906      0.879     0.919\nFold 5   0.928    0.889      0.970     0.942\n\nMean F1: 0.935\nMean Precision: 0.921\nMean Recall: 0.952\nMean Accuracy: 0.949\n-------------------------\nVersion 3: Naive Bayes\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         24                 3\nActual Negative         7                 53\n\nAccuracy: 0.885\n\n    Classification Report\n           Positive    Negative\nNum cases    27           60\nPrecision    0.77       0.95\nRecall       0.89       0.88\nF1 Score     0.83       0.91\n\n    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.889    0.842      0.941     0.909\nFold 2   0.838    0.775      0.912     0.864\nFold 3   0.923    0.968      0.882     0.943\nFold 4   0.955    0.941      0.970     0.965\nFold 5   0.811    0.732      0.909     0.837\n\nMean F1: 0.883\nMean Precision: 0.852\nMean Recall: 0.923\nMean Accuracy: 0.904\n##################################################\n"
+      "Version 1: Decision Tree\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         19                 3\nActual Negative         1                 24\n\nAccuracy: 0.915\n\n    Classification Report\n           Positive    Negative\nNum cases    22           25\nPrecision    0.95       0.89\nRecall       0.86       0.96\nF1 Score     0.90       0.92\n\n    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.933    0.913      0.955     0.936\nFold 2   0.917    0.846      1.000     0.915\nFold 3   0.977    1.000      0.955     0.979\nFold 4   0.950    1.000      0.905     0.957\nFold 5   0.884    0.864      0.905     0.889\n\nMean F1: 0.932\nMean Precision: 0.925\nMean Recall: 0.944\nMean Accuracy: 0.935\n-------------------------\nVersion 1: Naive Bayes\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         20                 2\nActual Negative         7                 18\n\nAccuracy: 0.809\n\n    Classification Report\n           Positive    Negative\nNum cases    22           25\nPrecision    0.74       0.90\nRecall       0.91       0.72\nF1 Score     0.82       0.80\n\n    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.894    0.840      0.955     0.894\nFold 2   0.826    0.792      0.864     0.830\nFold 3   0.977    1.000      0.955     0.979\nFold 4   1.000    1.000      1.000     1.000\nFold 5   0.870    0.800      0.952     0.867\n\nMean F1: 0.913\nMean Precision: 0.886\nMean Recall: 0.945\nMean Accuracy: 0.914\n##################################################\nVersion 2: Decision Tree\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         25                 2\nActual Negative         3                 57\n\nAccuracy: 0.943\n\n    Classification Report\n           Positive    Negative\nNum cases    27           60\nPrecision    0.89       0.97\nRecall       0.93       0.95\nF1 Score     0.91       0.96\n\n",
+      "    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.971    0.971      0.971     0.977\nFold 2   0.957    0.943      0.971     0.966\nFold 3   0.955    0.970      0.941     0.966\nFold 4   0.889    0.933      0.848     0.919\nFold 5   0.923    0.938      0.909     0.942\n\nMean F1: 0.939\nMean Precision: 0.951\nMean Recall: 0.928\nMean Accuracy: 0.954\n-------------------------\nVersion 2: Naive Bayes\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         25                 2\nActual Negative         8                 52\n\nAccuracy: 0.885\n\n    Classification Report\n           Positive    Negative\nNum cases    27           60\nPrecision    0.76       0.96\nRecall       0.93       0.87\nF1 Score     0.83       0.91\n\n    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.889    0.842      0.941     0.909\nFold 2   0.822    0.769      0.882     0.852\nFold 3   0.923    0.968      0.882     0.943\nFold 4   0.955    0.941      0.970     0.965\nFold 5   0.800    0.714      0.909     0.826\n\nMean F1: 0.878\nMean Precision: 0.847\nMean Recall: 0.917\nMean Accuracy: 0.899\n##################################################\nVersion 3: Decision Tree\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         24                 3\nActual Negative         5                 55\n\nAccuracy: 0.908\n\n    Classification Report\n           Positive    Negative\nNum cases    27           60\nPrecision    0.83       0.95\nRecall       0.89       0.92\nF1 Score     0.86       0.93\n\n    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.971    0.971      0.971     0.977\nFold 2   0.919    0.850      1.000     0.932\nFold 3   0.955    0.970      0.941     0.966\nFold 4   0.906    0.935      0.879     0.930\nFold 5   0.928    0.889      0.970     0.942\n\nMean F1: 0.936\nMean Precision: 0.923\nMean Recall: 0.952\nMean Accuracy: 0.949\n-------------------------\nVersion 3: Naive Bayes\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         24                 3\nActual Negative         7                 53\n\nAccuracy: 0.885\n\n    Classification Report\n           Positive    Negative\nNum cases    27           60\nPrecision    0.77       0.95\nRecall       0.89       0.88\nF1 Score     0.83       0.91\n\n    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.889    0.842      0.941     0.909\nFold 2   0.838    0.775      0.912     0.864\nFold 3   0.923    0.968      0.882     0.943\nFold 4   0.955    0.941      0.970     0.965\nFold 5   0.811    0.732      0.909     0.837\n\nMean F1: 0.883\nMean Precision: 0.852\nMean Recall: 0.923\nMean Accuracy: 0.904\n##################################################\n"
      ],
      "output_type": "stream"
     }
