--- a/voting_data_models.ipynb
+++ b/voting_data_models.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 85,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 86,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 87,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 88,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -178,8 +178,8 @@
     {
      "name": "stdout",
      "text": [
-      "Version 1: Decision Tree\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         19                 3\nActual Negative         1                 24\n\nAccuracy: 0.915\n\n    Classification Report\n           Positive    Negative\nNum cases    22           25\nPrecision    0.95       0.89\nRecall       0.86       0.96\nF1 Score     0.90       0.92\n\n    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.933    0.913      0.955     0.936\nFold 2   0.917    0.846      1.000     0.915\nFold 3   0.977    1.000      0.955     0.979\nFold 4   0.950    1.000      0.905     0.957\nFold 5   0.884    0.864      0.905     0.889\n\nMean F1: 0.932\nMean Precision: 0.925\nMean Recall: 0.944\nMean Accuracy: 0.935\n-------------------------\nVersion 1: Naive Bayes\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         20                 2\nActual Negative         7                 18\n\nAccuracy: 0.809\n\n    Classification Report\n           Positive    Negative\nNum cases    22           25\nPrecision    0.74       0.90\nRecall       0.91       0.72\nF1 Score     0.82       0.80\n\n    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.894    0.840      0.955     0.894\nFold 2   0.826    0.792      0.864     0.830\nFold 3   0.977    1.000      0.955     0.979\nFold 4   1.000    1.000      1.000     1.000\nFold 5   0.870    0.800      0.952     0.867\n\nMean F1: 0.913\nMean Precision: 0.886\nMean Recall: 0.945\nMean Accuracy: 0.914\n##################################################\nVersion 2: Decision Tree\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         25                 2\nActual Negative         3                 57\n\nAccuracy: 0.943\n\n    Classification Report\n           Positive    Negative\nNum cases    27           60\nPrecision    0.89       0.97\nRecall       0.93       0.95\nF1 Score     0.91       0.96\n\n",
-      "    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.971    0.971      0.971     0.977\nFold 2   0.957    0.943      0.971     0.966\nFold 3   0.955    0.970      0.941     0.966\nFold 4   0.889    0.933      0.848     0.919\nFold 5   0.923    0.938      0.909     0.942\n\nMean F1: 0.939\nMean Precision: 0.951\nMean Recall: 0.928\nMean Accuracy: 0.954\n-------------------------\nVersion 2: Naive Bayes\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         25                 2\nActual Negative         8                 52\n\nAccuracy: 0.885\n\n    Classification Report\n           Positive    Negative\nNum cases    27           60\nPrecision    0.76       0.96\nRecall       0.93       0.87\nF1 Score     0.83       0.91\n\n    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.889    0.842      0.941     0.909\nFold 2   0.822    0.769      0.882     0.852\nFold 3   0.923    0.968      0.882     0.943\nFold 4   0.955    0.941      0.970     0.965\nFold 5   0.800    0.714      0.909     0.826\n\nMean F1: 0.878\nMean Precision: 0.847\nMean Recall: 0.917\nMean Accuracy: 0.899\n##################################################\nVersion 3: Decision Tree\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         24                 3\nActual Negative         5                 55\n\nAccuracy: 0.908\n\n    Classification Report\n           Positive    Negative\nNum cases    27           60\nPrecision    0.83       0.95\nRecall       0.89       0.92\nF1 Score     0.86       0.93\n\n    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.971    0.971      0.971     0.977\nFold 2   0.919    0.850      1.000     0.932\nFold 3   0.955    0.970      0.941     0.966\nFold 4   0.906    0.935      0.879     0.930\nFold 5   0.928    0.889      0.970     0.942\n\nMean F1: 0.936\nMean Precision: 0.923\nMean Recall: 0.952\nMean Accuracy: 0.949\n-------------------------\nVersion 3: Naive Bayes\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         24                 3\nActual Negative         7                 53\n\nAccuracy: 0.885\n\n    Classification Report\n           Positive    Negative\nNum cases    27           60\nPrecision    0.77       0.95\nRecall       0.89       0.88\nF1 Score     0.83       0.91\n\n    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.889    0.842      0.941     0.909\nFold 2   0.838    0.775      0.912     0.864\nFold 3   0.923    0.968      0.882     0.943\nFold 4   0.955    0.941      0.970     0.965\nFold 5   0.811    0.732      0.909     0.837\n\nMean F1: 0.883\nMean Precision: 0.852\nMean Recall: 0.923\nMean Accuracy: 0.904\n##################################################\n"
+      "Version 1: Decision Tree\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         16                 0\nActual Negative         1                 30\n\nAccuracy: 0.979\n\n    Classification Report\n           Positive    Negative\nNum cases    16           31\nPrecision    0.94       1.00\nRecall       1.00       0.97\nF1 Score     0.97       0.98\n\n    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.933    0.913      0.955     0.936\nFold 2   1.000    1.000      1.000     1.000\nFold 3   0.977    1.000      0.955     0.979\nFold 4   0.950    1.000      0.905     0.957\nFold 5   0.884    0.864      0.905     0.889\n\nMean F1: 0.949\nMean Precision: 0.955\nMean Recall: 0.944\nMean Accuracy: 0.952\n-------------------------\nVersion 1: Naive Bayes\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         14                 2\nActual Negative         4                 27\n\nAccuracy: 0.872\n\n    Classification Report\n           Positive    Negative\nNum cases    16           31\nPrecision    0.78       0.93\nRecall       0.88       0.87\nF1 Score     0.82       0.90\n\n    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.894    0.840      0.955     0.894\nFold 2   0.826    0.792      0.864     0.830\nFold 3   0.977    1.000      0.955     0.979\nFold 4   1.000    1.000      1.000     1.000\nFold 5   0.870    0.800      0.952     0.867\n\nMean F1: 0.913\nMean Precision: 0.886\nMean Recall: 0.945\nMean Accuracy: 0.914\n##################################################\nVersion 2: Decision Tree\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         27                 1\nActual Negative         0                 59\n\nAccuracy: 0.989\n\n    Classification Report\n           Positive    Negative\nNum cases    28           59\nPrecision    1.00       0.98\nRecall       0.96       1.00\nF1 Score     0.98       0.99\n\n    Cross Validation Scores",
+      "\n         F1     Precision    Recall    Accuracy\nFold 1   0.971    0.971      0.971     0.977\nFold 2   0.971    0.971      0.971     0.977\nFold 3   0.955    0.970      0.941     0.966\nFold 4   0.889    0.933      0.848     0.919\nFold 5   0.923    0.938      0.909     0.942\n\nMean F1: 0.942\nMean Precision: 0.956\nMean Recall: 0.928\nMean Accuracy: 0.956\n-------------------------\nVersion 2: Naive Bayes\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         27                 1\nActual Negative         5                 54\n\nAccuracy: 0.931\n\n    Classification Report\n           Positive    Negative\nNum cases    28           59\nPrecision    0.84       0.98\nRecall       0.96       0.92\nF1 Score     0.90       0.95\n\n    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.889    0.842      0.941     0.909\nFold 2   0.822    0.769      0.882     0.852\nFold 3   0.923    0.968      0.882     0.943\nFold 4   0.955    0.941      0.970     0.965\nFold 5   0.800    0.714      0.909     0.826\n\nMean F1: 0.878\nMean Precision: 0.847\nMean Recall: 0.917\nMean Accuracy: 0.899\n##################################################\nVersion 3: Decision Tree\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         26                 2\nActual Negative         2                 57\n\nAccuracy: 0.954\n\n    Classification Report\n           Positive    Negative\nNum cases    28           59\nPrecision    0.93       0.97\nRecall       0.93       0.97\nF1 Score     0.93       0.97\n\n    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.971    0.971      0.971     0.977\nFold 2   0.958    0.919      1.000     0.966\nFold 3   0.955    0.970      0.941     0.966\nFold 4   0.906    0.935      0.879     0.930\nFold 5   0.928    0.889      0.970     0.942\n\nMean F1: 0.943\nMean Precision: 0.937\nMean Recall: 0.952\nMean Accuracy: 0.956\n-------------------------\nVersion 3: Naive Bayes\n    Confusion Matrix\n                 Predict Positive    Predict Negative\nActual Positive         27                 1\nActual Negative         4                 55\n\nAccuracy: 0.943\n\n    Classification Report\n           Positive    Negative\nNum cases    28           59\nPrecision    0.87       0.98\nRecall       0.96       0.93\nF1 Score     0.92       0.96\n\n    Cross Validation Scores\n         F1     Precision    Recall    Accuracy\nFold 1   0.889    0.842      0.941     0.909\nFold 2   0.838    0.775      0.912     0.864\nFold 3   0.923    0.968      0.882     0.943\nFold 4   0.955    0.941      0.970     0.965\nFold 5   0.811    0.732      0.909     0.837\n\nMean F1: 0.883\nMean Precision: 0.852\nMean Recall: 0.923\nMean Accuracy: 0.904\n##################################################\n"
      ],
      "output_type": "stream"
     }
@@ -194,12 +194,13 @@
     "\n",
     "    X_train, X_test, y_train, y_test = ms.train_test_split(feat, lab,\n",
     "                                                           test_size=0.2,\n",
-    "                                                           random_state=123)\n",
+    "                                                           random_state=1776)\n",
     "\n",
     "    # Decision Tree model\n",
     "    print('Version {}: Decision Tree'.format(i+1))\n",
     "    tree = DecisionTreeClassifier(criterion='gini',\n",
-    "                                  class_weight='balanced')\n",
+    "                                  class_weight='balanced',\n",
+    "                                  random_state=1916)\n",
     "    tree.fit(X_train, y_train)\n",
     "\n",
     "    y_pred_tree = tree.predict(X_test)\n",
